--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ section{
     box-shadow: 0px 9px 15px 0px rgb(0, 195, 255);
 }
 body{
-    background-color: rgb(171, 174, 175)  ;
+    background-image: linear-gradient( to right, blue, yellow, red, green) ;
 }
 .progress-bar{
     height: 16px;
@@ -110,4 +110,12 @@ footer{
     margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+.google-maps{
+    width: 100%;
+    height: 500px;
+    border: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
 }
